hphp/hack/test/typecheck/inout/bad_inout_decl_async.php
<?hh // strict

async function gen_test(inout int $i): Awaitable<void> {}
